2005-02-27  Peter Bartok  <pbartok@novell.com>

	* XplatUI.cs, XplatUIDriver.cs: Added new GetMenuOrigin() method
	* XplatUIOSX.cs: Added GetMenuOrigin() stub
	* XplatUIWin32.cs: Implemented GetMenuOrigin()
	* XplatUIX11.cs:
	  - Implemented GetMenuDC()
	  - Implemented GetMenuOrigin()
	  - Implemented ReleaseMenuDC()
	  - Implemented generation of WM_NCPAINT message
	  - Implemented generation and handling of WM_NCCALCSIZE message
	* Form.cs: Added debug helper message for Jordi's menu work
	* Hwnd.cs:
	  - Modified ClientRect property; added setter, fixed getter to handle
	    setting of ClientRect
	  - Added MenuOrigin property

2005-02-26  Peter Bartok  <pbartok@novell.com>

	* XplatUIX11.cs:
	  - Destroys the caret if a window that's being destroyed contains it
	  - Ignores expose events coming from the X11 queue for windows that
	    already are destroyed
	  - Now uses the proper variable for handling DestroyNotify, before we
	    marked the wrong window as destroyed
	  - Improved/added some debug output

2005-02-26  Peter Bartok  <pbartok@novell.com>

	* X11Keyboard.cs: Fixes to work on 64bit systems

2005-02-26  Peter Bartok  <pbartok@novell.com>

	* Control.cs: 
	  - Now calling OnHandleDestroyed from DestroyHandle()
	    instead of Dispose()
	  - Removed bogus call to controls.Remove() from DestroyHandle()

2005-02-26  Peter Bartok  <pbartok@novell.com>

	* Control.cs: Properly destroy child windows when our handle is 
	  destroyed

2005-02-25  Peter Bartok  <pbartok@novell.com>

	* XplatUI.cs:
	  - Added 'DriverDebug' define to allow tracing XplatUI API calls
	  - Alphabetized Static Methods and Subclasses

	* XplatUIX11.cs:
	  - Added XException class to allow custom handling of X11 exceptions
	  - Created custom X11 error handler, tied into XException class
	  - Added support for MONO_XEXCEPTIONS env var to allow the user
	    to either throw an exception on X errors or continue running
	    after displaying the error