@@ -1,3 +1,7 @@
+2005-02-27  Jackson Harper  <jackson@ximian.com>
+
+	* CurrencyManager.cs: Add PositionChanged stuff.
+
 2005-02-27  Peter Bartok  <pbartok@novell.com>
 
 	* XplatUI.cs, XplatUIDriver.cs: Added new GetMenuOrigin() method
